[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/diagraph/DialogBox.gd" type="Script" id=1]

[node name="DialogBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBox" type="Control" parent="."]
anchor_left = 0.1
anchor_top = 0.75
anchor_right = 0.9
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="TextBox"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="TextBox"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="TextBox"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Choices" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.9
anchor_bottom = 0.75
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice1" type="Button" parent="Choices"]
margin_right = 409.0
margin_bottom = 20.0

[node name="Choice2" type="Button" parent="Choices"]
margin_top = 24.0
margin_right = 409.0
margin_bottom = 44.0

[node name="Choice3" type="Button" parent="Choices"]
margin_top = 48.0
margin_right = 409.0
margin_bottom = 68.0

[node name="Choice4" type="Button" parent="Choices"]
margin_top = 72.0
margin_right = 409.0
margin_bottom = 92.0
